objects/Payment__c.object
<CustomObject><fields>
        <fullName>CardLast4Digits__c</fullName>
        <label>Card Last 4 Digits</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>CardType__c</fullName>
        <label>Card Type</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Comments from student (payee). If you want to leave notes on this payment record then use the Notes/Attachments related list below.</inlineHelpText>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Involvement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Involvement</label>
        <referenceTo>BP_Involvement__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>PaymentAmount__c</fullName>
        <label>Payment Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Bulletin de Versement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>School Fees</fullName>
                </value>
                <value>
                    <fullName>Donation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>TransactionId__c</fullName>
        <label>Transaction ID</label>
        <length>60</length>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Payment</label><nameField>
        <displayFormat>Pay-{0}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Payments</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>